# salarable-ml-backend-python

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  event_manager.py
app/exceptions/: interview.py
app/routers/: interview_router.py  interviews_router.py  portfolio_router.py  question_router.py
app/services/: interview_service.py  portfolio_service.py  question_service.py  question_service_v4.py  question_service_v7.py
app/tests/: test_search.py
app/utils/: RTZRClient.py  s3_uploader.py
