[tool.poetry]
name = "ml-backend-python"
version = "0.1.0"
description = ""
authors = ["an-jiohh <dkswlgh99@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pinecone-client = "^5.0.1"
torch = "^2.4.1"
kobert-transformers = "^0.6.0"
pydantic-settings = "^2.5.2"
pinecone-plugin-inference = "^1.1.0"
protoc-gen-openapiv2 = "^0.0.1"
grpcio = "^1.67.0"
langchain-openai = "^0.2.2"
asgi-correlation-id = "^4.3.4"
sentry-sdk = "^2.17.0"
python-multipart = "^0.0.12"
pymupdf = "^1.24.11"
pillow = "^11.0.0"
boto3 = "^1.35.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
